@@ -84,6 +84,7 @@
               <p>
                 <a href="#find-patients" data-role="button" data-icon="search">Go to patient finder</a>
                 <a href="#" data-role="button" data-icon="delete" id="patient-delete">Delete this patient</a>
+                <a href="#" data-role="button" data-icon="gear" id="patient-archive">Download ZIP</a>
               </p>
             </div>
           </div>
@@ -115,6 +116,7 @@
               </ul>
               <p>
                 <a href="#" data-role="button" data-icon="delete" id="study-delete">Delete this study</a>
+                <a href="#" data-role="button" data-icon="gear" id="study-archive">Download ZIP</a>
               </p>
             </div>
           </div>
@@ -148,8 +150,9 @@
               </ul>
               <p>
                 <a href="#" data-role="button" data-icon="delete" id="series-delete">Delete this series</a>
-                <a href="#" data-role="button" data-icon="arrow-d" id="series-preview">Preview this series</a>
-                <a href="#" data-role="button" data-icon="arrow-d" id="series-store">Store in another DICOM modality</a>
+                <a href="#" data-role="button" data-icon="search" id="series-preview">Preview this series</a>
+                <a href="#" data-role="button" data-icon="forward" id="series-store">Store in another DICOM modality</a>
+                <a href="#" data-role="button" data-icon="gear" id="series-archive">Download ZIP</a>
               </p>
             </div>
           </div>
@@ -185,8 +188,8 @@
                 <a href="#" data-role="button" data-icon="delete" id="instance-delete">Delete this instance</a>
                 <a href="#" data-role="button" data-icon="arrow-d" id="instance-download-dicom">Download the DICOM file</a>
                 <a href="#" data-role="button" data-icon="arrow-d" id="instance-download-json">Download the JSON file</a>
-                <a href="#" data-role="button" data-icon="arrow-d" id="instance-preview">Preview the instance</a>
-                <a href="#" data-role="button" data-icon="arrow-d" id="instance-store">Store in another DICOM modality</a>
+                <a href="#" data-role="button" data-icon="search" id="instance-preview">Preview the instance</a>
+                <a href="#" data-role="button" data-icon="forward" id="instance-store">Store in another DICOM modality</a>
               </p>
             </div>
           </div>
